# ODCD-Framework

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cnn_module.py  predict.py  preprocessing.py  pyproject.toml  requirements.txt  run_preprocessing_pipeline.py  train.py
approaches/: README.md  run_detection_pipeline.py
approaches/cnn_image_detection/: predict.py  run_preprocessing_pipeline.py  train.py
approaches/cnn_image_detection/cnn_approach/: cnn_module.py  datasets.py  preprocessing_pipeline.py
approaches/cnn_image_detection/utils/: config.py  evaluate.py  sanity_checks.py  utilities.py
approaches/cnn_image_detection/vis/: image_classification.py
approaches/object_detection/: comparison_evaluation.py  evaluate.py  predict.py  run_detection_pipeline.py  train.py
approaches/object_detection/utils/: cdrift_evaluation.py  config.py  evaluation.py  prediction.py  preprocessing.py  vdd_helper.py
approaches/object_segmentation/: comparison_evaluation.py  config.py  datasets.py  evaluate.py  preprocessing.py  run_detection_pipeline.py  train.py  utilities.py
approaches/object_segmentation/utils/: cdrift_evaluation.py  config.py  datasets.py  evaluation.py  prediction.py  preprocessing.py  utilities.py  vdd_data_analysis.py  vdd_helper.py
approaches/visualizations/: image_classification.py  object_detection.py  utils.py
cnn_approach/: cnn_module.py  datasets.py  preprocessing_pipeline.py  xai.py
cnn_image_detection/: predict.py  train.py
evaluation_results/: README.md
evaluation_results/ProDrift/: evaluation_report_general_evaluation_0.15_lag.txt  evaluation_results_general_evaluation_0.01_lag.csv  evaluation_results_general_evaluation_0.15_lag.csv  prodrift_results.csv  prodrift_results.txt  prodrift_results_manual.xlsx
evaluation_results/ProDrift/evaluation_files/: evaluation_report_comparison_0.01_lag.txt  evaluation_report_comparison_0.025_lag.txt  evaluation_report_comparison_0.15_lag.txt  evaluation_report_comparison_0.1_lag.txt  evaluation_report_comparison_0.2_lag.txt  evaluation_report_general_evaluation_0.01_lag.txt  (+11 more)
evaluation_results/VDD/: README.md
utils/: cnn_module.py  config.py  evaluate.py  sanity_checks.py  utilities.py
(+2 files in other folders)
