[tool.poetry]
name = "supervised-cd"
version = "0.1.0"
description = "Environment for a supervised concept drift detection approach."
authors = ["jkoessle <mail@jonathan-koessler.de>"]
readme = "README.md"
packages = [{include = "supervised_cd"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.1"
pm4py = "^2.5.0"
ruff = "^0.0.247"
pre-commit = "^3.0.4"
scipy = "^1.10.1"
autopep8 = "^2.0.2"
deprecated = "^1.2.13"
tensorflow = "^2.11.1"
pytz = "^2022.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
