[tool.poetry]
name = "supervised-cd"
version = "0.1.0"
description = "Environment for a supervised concept drift detection approach."
authors = ["jkoessle <mail@jonathan-koessler.de>"]
readme = "README.md"
packages = [{include = "supervised_cd"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = ">=1.24.0,<1.25.0"
pm4py = ">=2.7.0,<2.8.0"
scipy = "^1.10.1"
deprecated = "^1.2.13"
tensorflow = ">=2.11.0,<2.12.0"
pytz = ">=2022.7.0,<2022.8.0"
tf-keras-vis = ">=0.8.0,<0.9.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.259"
pre-commit = "^3.2.1"
autopep8 = "^2.0.2"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
