[tool.poetry]
name = "supervised-cd"
version = "0.1.0"
description = "Environment for a supervised concept drift detection approach."
authors = ["jkoessle <mail@jonathan-koessler.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pm4py = ">=2.7.0,<2.8.0"
deprecated = "^1.2.13"
tf-keras-vis = ">=0.8.0,<0.9.0"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "~2.10"
tf-models-official = "~2.10"
seaborn = "0.11.1"
wandb = "^0.15.0"
pycocotools = "^2.0.6"
imageio = "^2.28.1"
polars = "^0.17.10"
scikit-image = "^0.20.0"
tensorflow-datasets = "4.8.3"
ruptures = "^1.1.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.259"
pre-commit = "^3.2.1"
autopep8 = "^2.0.2"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
